[workspace]
members = [
    "crates/mev-share-backend",
    "crates/mev-share-sse",
    "crates/mev-share-rpc-api",
    "crates/mev-share",

    # Internal
    "examples",
]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.package]
version = "0.1.4"
edition = "2021"
rust-version = "1.70"
authors = ["mev-share-rs devs"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/paradigmxyz/mev-share-rs"
repository = "https://github.com/paradigmxyz/mev-share-rs"

[workspace.dependencies]
## workspace crates
mev-share = { path = "crates/mev-share" }
mev-share-sse = { path = "crates/mev-share-sse" }
mev-share-rpc-api = { path = "crates/mev-share-rpc-api" }

## eth
alloy-primitives = { version = "0.8", features = ["serde"] }
alloy = { version = "=0.9.2", features = ["full", "json-rpc", "signers", "serde", "rpc-types-mev"]}

## net
http = "1.3.1"
tower = "0.4"
hyper = "1.6.0"
jsonrpsee = "0.24.7"

## async
futures-util = "0.3"
tokio = "=1.41.1"
async-trait = "0.1"

## misc
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
thiserror = "1.0"
rand = "0.8.5"
reqwest = "0.12.12"

[patch.crates-io]
c-kzg = { git = "https://github.com/cristibctr/c-kzg-4844", branch = "v1.0.3"}
tokio = { git = "https://github.com/cristibctr/tokio-wasix", branch = "wasix-1.41.1" }
socket2 = { git = "https://github.com/cristibctr/socket2.git", branch = "v0.5.8" }
socket3 = { git = "https://github.com/cristibctr/socket2.git", branch = "v0.6.0", package = "socket2" }
hostname = { git = "https://github.com/cristibctr/hostname", branch = "master"}
libc = { git = "https://github.com/cristibctr/libc-0.2.169", branch = "wasix-0.2.169" }
metrics-process = { git = "https://github.com/cristibctr/rs-metrics-process", branch = "feat/add-wasm-support" }
jsonrpsee = { git = "https://github.com/cristibctr/jsonrpsee", branch = "v0.24.7-wasix" }
jsonrpsee-core = { git = "https://github.com/cristibctr/jsonrpsee", branch = "v0.24.7-wasix" }
jsonrpsee-server = { git = "https://github.com/cristibctr/jsonrpsee", branch = "v0.24.7-wasix" }
jsonrpsee-http-client = { git = "https://github.com/cristibctr/jsonrpsee", branch = "v0.24.7-wasix" }
jsonrpsee-types = { git = "https://github.com/cristibctr/jsonrpsee", branch = "v0.24.7-wasix" }
getrandom = { git = "https://github.com/cristibctr/getrandom", branch = "feat/add-wasm-support-0.3.1" }
procfs = { git = "https://github.com/cristibctr/procfs", branch = "feat/add-wasm-support" }
rustix = { git = "https://github.com/cristibctr/rustix", branch = "feat/add-wasm-support" }
crossterm = { git = "https://github.com/cristibctr/crossterm", branch = "feat/add-wasm-support" }
mio = { git = "https://github.com/cristibctr/mio", branch = "v1.0.1" }
parking_lot = { git = "https://github.com/cristibctr/parking_lot", branch = "master" }
reqwest = { git = "https://github.com/cristibctr/reqwest", branch = "master" }
hyper-util = { git = "https://github.com/cristibctr/hyper-util", branch = "master" }
discv5 = { git = "https://github.com/cristibctr/discv5", rev = "v0.8.1" }
interprocess = { git = "https://github.com/cristibctr/interprocess", branch = "main" }
hickory-resolver = { git = "https://github.com/cristibctr/hickory-dns", branch = "v0.25.0-alpha.5" }
futures-utils-wasm = { git = "https://github.com/cristibctr/futures-utils-wasm", branch = "main" }
rustls-native-certs = { git = "https://github.com/cristibctr/rustls-native-certs", branch = "main"}
alloy-consensus = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-eips = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-genesis = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-json-rpc = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-network = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-network-primitives = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-node-bindings = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-provider = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-pubsub = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-rpc-client = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-rpc-types = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-rpc-types-admin = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-rpc-types-anvil = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-rpc-types-beacon = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-rpc-types-debug = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-rpc-types-engine = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-rpc-types-eth = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-rpc-types-mev = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-rpc-types-trace = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-rpc-types-txpool = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-serde = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-signer = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-signer-local = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-transport = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-transport-http = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-transport-ipc = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-transport-ws = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
wait-timeout = { git = "https://github.com/cristibctr/wait-timeout", branch = "main"}
rusty-fork = {git = "https://github.com/cristibctr/rusty-fork", branch = "master"}
tempfile = {git = "https://github.com/cristibctr/tempfile", branch = "v3.16.0"}
reth = {git = "https://github.com/cristibctr/reth", branch = "v1.1.5"}
home = {git = "https://github.com/cristibctr/cargo", branch = "home-v0.5.10"}
rusqlite = {git = "https://github.com/cristibctr/rusqlite", branch = "v0.27.0"}
libsqlite3-sys = {git = "https://github.com/cristibctr/rusqlite", branch = "v0.27.0"}
ethers-signers = {git = "https://github.com/cristibctr/ethers-rs", branch = "master"}
ethers-core = {git = "https://github.com/cristibctr/ethers-rs", branch = "master"}
